// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List View with schemas matches snapshot 1`] = `
<div
  className="section"
>
  <Breadcrumb>
    Schema Registry
  </Breadcrumb>
  <div
    className="box"
  >
    <table
      className="table is-striped is-fullwidth"
    >
      <thead>
        <tr>
          <th>
            Schema Name
          </th>
          <th>
            Version
          </th>
          <th>
            Compatibility
          </th>
        </tr>
      </thead>
      <tbody>
        <ListItem
          key="1"
          subject={
            Object {
              "compatibilityLevel": "BACKWARD",
              "id": 1,
              "schema": "{\\"type\\":\\"record\\",\\"name\\":\\"MyRecord1\\",\\"namespace\\":\\"com.mycompany\\",\\"fields\\":[{\\"name\\":\\"id\\",\\"type\\":\\"long\\"}]}",
              "subject": "test",
              "version": "1",
            }
          }
        />
        <ListItem
          key="1"
          subject={
            Object {
              "compatibilityLevel": "BACKWARD",
              "id": 1,
              "schema": "{\\"type\\":\\"record\\",\\"name\\":\\"MyRecord2\\",\\"namespace\\":\\"com.mycompany\\",\\"fields\\":[{\\"name\\":\\"id\\",\\"type\\":\\"long\\"}]}",
              "subject": "test2",
              "version": "1",
            }
          }
        />
        <ListItem
          key="1"
          subject={
            Object {
              "compatibilityLevel": "BACKWARD",
              "id": 1,
              "schema": "{\\"type\\":\\"record\\",\\"name\\":\\"MyRecord3\\",\\"namespace\\":\\"com.mycompany\\",\\"fields\\":[{\\"name\\":\\"id\\",\\"type\\":\\"long\\"}]}",
              "subject": "test3",
              "version": "1",
            }
          }
        />
      </tbody>
    </table>
  </div>
</div>
`;

exports[`List View without schemas matches snapshot 1`] = `
<div
  className="section"
>
  <Breadcrumb>
    Schema Registry
  </Breadcrumb>
  <div
    className="box"
  >
    <table
      className="table is-striped is-fullwidth"
    >
      <thead>
        <tr>
          <th>
            Schema Name
          </th>
          <th>
            Version
          </th>
          <th>
            Compatibility
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
  </div>
</div>
`;
